<resources>

    <!--    App-->
    <string name="app_name">FutSpect</string>
    <string name="app_icon_description">FutSpects App Icon</string>

    <!--    Title-->
    <string name="title_leagues">Leagues</string>
    <string name="title_fixtures">Fixtures</string>
    <string name="title_menu">More</string>

    <!--    More-->
    <string name="more_settings">Settings</string>
    <string name="more_feedback">Feedback</string>
    <string name="more_about">About</string>
    <string name="more_dark_theme">Dark Theme</string>
    <string name="more_light_theme">Light Theme</string>

    <!--    Fixtures-->
    <string name="fixtures_vs">vs.</string>
    <string name="fixtures_dash">-</string>
    <string name="fixtureInfo_title">Fixture</string>
    <string name="fixtureInfo_events">Events</string>
    <string name="fixtureEvent_contentDescription">Soccer Ball</string>

    <!--    Table-->
    <string name="table_header_rank">#</string>
    <string name="table_header_team">Team</string>
    <string name="table_header_win">W</string>
    <string name="table_header_draw">D</string>
    <string name="table_header_loss">L</string>
    <string name="table_header_points">P</string>

    <!--    Leagues-->
    <string name="league_filter_search_hint">Search</string>
    <string name="league_filter_reset">Reset</string>
    <string name="league_chip_filter_league">League</string>
    <string name="league_chip_filter_cup">Cup</string>
    <string name="league_filter_apply">Apply</string>
    <string name="league_filter_header">Filter Leagues</string>
    <string name="league_fab_filter">Filter</string>

    <!--    Team-->
    <string name="team_title">Team</string>

</resources>
