<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorSurface"
        android:orientation="horizontal"
        android:paddingStart="@dimen/view_table_accent_width"
        android:paddingTop="@dimen/padding_small"
        android:paddingEnd="@dimen/padding_small"
        android:paddingBottom="@dimen/padding_small">

    <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textView_table_rank"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/table_header_rank"
            app:layout_constraintEnd_toStartOf="@+id/textView_table_name"
            app:layout_constraintHorizontal_weight="1.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textView_table_name"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/table_header_team"
            app:layout_constraintEnd_toStartOf="@+id/textView_table_wins"
            app:layout_constraintHorizontal_weight="10"
            app:layout_constraintStart_toEndOf="@+id/textView_table_rank"
            app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textView_table_wins"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/table_header_win"
            app:layout_constraintEnd_toStartOf="@+id/textView_table_draws"
            app:layout_constraintHorizontal_weight="1.5"
            app:layout_constraintStart_toEndOf="@+id/textView_table_name"
            app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textView_table_draws"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/table_header_draw"
            app:layout_constraintEnd_toStartOf="@+id/textView_table_losses"
            app:layout_constraintHorizontal_weight="1.5"
            app:layout_constraintStart_toEndOf="@+id/textView_table_wins"
            app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textView_table_losses"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/table_header_loss"
            app:layout_constraintEnd_toStartOf="@+id/textView_table_points"
            app:layout_constraintHorizontal_weight="1.5"
            app:layout_constraintStart_toEndOf="@+id/textView_table_draws"
            app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textView_table_points"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/table_header_points"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@+id/textView_table_losses"
            app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
